--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,12 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Build shared package (if present)
+        run: |
+          if [ -f packages/shared/package.json ]; then npm -w packages/shared run build; fi
+
       - name: Build web app
-        run: npm run build:web || echo "Build completed with warnings"
+        run: npm run build:web
 
       - name: Lint web app
         run: npm run lint:web || echo "Linting completed with warnings"
