--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,15 +20,15 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Install web dependencies (workspace)
+        run: npm -w apps/web ci || npm -w apps/web install
 
       - name: Build shared package (if present)
         run: |
-          if [ -f packages/shared/package.json ]; then npm -w packages/shared run build; fi
+          if [ -f packages/shared/package.json ]; then npm -w packages/shared ci || npm -w packages/shared install; npm -w packages/shared run build; fi
 
       - name: Build web app
-        run: npm run build:web
+        run: npm -w apps/web run build
 
       - name: Lint web app
         run: npm run lint:web || echo "Linting completed with warnings"
