ci: bootstrap root with npm install before workspace ci to stabilize web build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,9 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
+      - name: Install root dependencies (workspace bootstrap)
+        run: npm install
+
       - name: Install web dependencies (workspace)
         run: npm -w apps/web ci || npm -w apps/web install
 
