--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,15 +20,12 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
-      - name: Install root dependencies (workspace bootstrap)
-        run: npm install
-
-      - name: Install web dependencies (workspace)
-        run: npm -w apps/web ci || npm -w apps/web install
+      - name: Clean install all workspaces (root)
+        run: npm ci
 
       - name: Build shared package (if present)
         run: |
-          if [ -f packages/shared/package.json ]; then npm -w packages/shared ci || npm -w packages/shared install; npm -w packages/shared run build; fi
+          if [ -f packages/shared/package.json ]; then npm -w packages/shared run build; fi
 
       - name: Build web app
         run: npm -w apps/web run build
