--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,10 @@ jobs:
         run: |
           if [ -f packages/shared/package.json ]; then npm -w packages/shared run build; fi
 
-      - name: Build web app
-        run: npm -w apps/web run build
+      - name: Build web app (workspace cwd)
+        run: |
+          cd apps/web
+          npm run build
 
       - name: Lint web app
         run: npm run lint:web || echo "Linting completed with warnings"
