feat: add ArTST and Ollama integrations; new web pages/components; API routers; assets; update configs and docs

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ncmh-wellbeing-app",
+  "name": "shaheen-app",
   "version": "1.0.0",
-  "description": "Open-source, non-clinical Arabic wellbeing app for NCMH",
+  "description": "Shaheen - Arabic emotional learning and wellbeing companion",
   "private": true,
   "workspaces": [
     "apps/*",
