--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@ncmh/api",
+  "name": "@shaheen/api",
   "version": "1.0.0",
-  "description": "FastAPI backend for NCMH wellbeing app",
+  "description": "FastAPI backend for Shaheen emotional learning app",
   "scripts": {
     "dev": "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000",
     "build": "python build.py",
