--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -3,11 +3,11 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "ncmh-wellbeing-api"
+name = "shaheen-api"
 version = "1.0.0"
-description = "FastAPI backend for NCMH wellbeing app"
+description = "FastAPI backend for Shaheen emotional learning app"
 authors = [
-    {name = "NCMH Team", email = "team@ncmh.org"}
+    {name = "Shaheen Team", email = "team@shaheen.app"}
 ]
 readme = "README_API.md"
 requires-python = ">=3.9"
@@ -27,6 +27,14 @@ dependencies = [
     "numpy>=1.24.0",
     "scikit-learn>=1.3.0",
     "sentence-transformers>=2.2.2",
+    "torch>=2.0.0",
+           "transformers>=4.46.3",
+           "librosa>=0.10.0",
+           "soundfile>=0.12.0",
+           "fairseq>=0.12.0",
+           "torch>=2.0.0",
+           "arabic-reshaper>=3.0.0",
+           "python-bidi>=0.4.2",
     "pytest>=7.4.0",
     "pytest-asyncio>=0.21.0",
     "pytest-cov>=4.1.0"
