--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,18 +10,19 @@
     "lint:fix": "eslint . --ext ts,tsx --fix"
   },
   "dependencies": {
+    "clsx": "^2.0.0",
+    "dexie": "^3.2.4",
+    "framer-motion": "^10.16.0",
+    "i18next": "^23.6.0",
+    "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "framer-motion": "^10.16.0",
-    "dexie": "^3.2.4",
-    "i18next": "^23.6.0",
     "react-i18next": "^13.5.0",
-    "recharts": "^2.8.0",
-    "lucide-react": "^0.294.0",
-    "clsx": "^2.0.0"
+    "react-router-dom": "^6.20.0",
+    "recharts": "^2.8.0"
   },
   "devDependencies": {
+    "@types/node": "^24.9.1",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
