--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -2,6 +2,9 @@
 requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools]
+packages = ["app"]
+
 [project]
 name = "shaheen-api"
 version = "1.0.0"
